--- a/website/styles/theme.css
+++ b/website/styles/theme.css
@@ -1,17 +1,23 @@
 :root {
 	color-scheme: dark light;
+
+	/* Dark theme colours */
 	--primary-background-color: #303030;
 	--secondary-background-color: #212121;
 	--link-colour: #58A6FF;
 
 	--primary: #2196F3;
+
+	--text-muted: lightgray;
 }
 
 @media (prefers-color-scheme: light) {
 	:root {
+		/* Light theme colours */
 		--primary-background-color: #FAFAFA;
 		--secondary-background-color: #9E9E9E;
 		--link-colour: #0000EE;
+		--text-muted: #474748;
 	}
 }
 
